[project]
name = "optical-flow"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yutteee", email = "yusaku_nakamura_aa@icloud.com" }
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "numpy>=2.0.1",
    "argparse>=1.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/optical_flow"]
